# example_http_archive

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  psimd_test.BUILD
test/: BUILD.bazel  print.ts
